welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:5: error: not found: value return2
		return2*(a+b)
                ^